[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nagios-plugins-collection"
version = "1.0.0"
description = "A collection of enterprise-grade Nagios plugins for monitoring various systems"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
maintainers = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
keywords = ["nagios", "monitoring", "plugins", "health", "check"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.5.0;python_version<'3.8'",
    "importlib-metadata>=6.6.0;python_version<'3.8'",
    "dataclasses>=0.8;python_version<'3.7'",
    "pexpect>=4.8.0",
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "tox>=4.6.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "pydocstyle>=6.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.1",
    "build>=0.10.0",
    "twine>=4.0.2",
]

[project.urls]
"Homepage" = "https://github.com/thomasvincent/nagios-plugins-collection"
"Bug Tracker" = "https://github.com/thomasvincent/nagios-plugins-collection/issues"
"Documentation" = "https://github.com/thomasvincent/nagios-plugins-collection/wiki"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
