[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check_etl"
version = "1.0.0"
description = "ETL Component Status Checker for Nagios"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
maintainers = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
keywords = ["nagios", "monitoring", "etl", "component", "status", "check"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.26.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]
all = [
    "check_etl[dev]",
]

[project.urls]
"Homepage" = "https://github.com/thomasvincent/nagios-plugins-collection"
"Bug Tracker" = "https://github.com/thomasvincent/nagios-plugins-collection/issues"
"Documentation" = "https://github.com/thomasvincent/nagios-plugins-collection/tree/main/check_etl"

[project.scripts]
check_etl = "etl_modernized:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
asyncio_mode = "auto"

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0511",  # fixme
]
