[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hadoop-health-monitor"
version = "0.1.0"
description = "A comprehensive health monitoring tool for Hadoop clusters"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
maintainers = [
    {name = "Thomas Vincent", email = "thomasvincent@gmail.com"}
]
keywords = ["hadoop", "monitoring", "health", "nags", "hdfs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.24.0,<0.25.0",
    "typing-extensions>=4.5.0;python_version<'3.8'",
    "importlib-metadata>=6.6.0;python_version<'3.8'",
    "dataclasses>=0.8;